init todo：表结构初始化，逻辑理顺